// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create and remove reaction: Respected 1`] = `
<button
  aria-label="Respected"
  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton CommentContainer-actionButton coral-reactedButton coral-comment-reactedButton ReactionButton-button"
  data-color="mono"
  data-testid="comment-reaction-button"
  data-variant="text"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <i
    aria-hidden="true"
    className="Icon-root Icon-sm ReactionButton-reacted"
  >
    thumb_up
  </i>
  <span
    className="ReactionButton-reacted"
  >
    1
  </span>
</button>
`;

exports[`create and remove reaction: Unrespected 1`] = `
<button
  aria-label="Respect"
  className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
  data-color="mono"
  data-testid="comment-reaction-button"
  data-variant="text"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <i
    aria-hidden="true"
    className="Icon-root Icon-sm"
  >
    thumb_up
  </i>
</button>
`;
